# trial.http.curl

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  co_curl.cpp  co_curl_get.cpp  co_curl_head.cpp  co_curl_post.cpp  co_curl_put.cpp  message_io.hpp
include/trial/http/curl/: endpoint.hpp  error.hpp  message.hpp  socket.hpp  status.hpp
include/trial/http/curl/detail/: endpoint.ipp  error.ipp  service.hpp  service.ipp  socket.ipp  status.ipp
